# DistFl-Client

./: .gitignore  MANIFEST.in  Makefile  README.md  example_config.yaml  example_usage.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
fl_client/: __init__.py
fl_client/cli/: __init__.py  main.py
fl_client/communication/: __init__.py  compressor.py  serializer.py
fl_client/config/: __init__.py  config.py
fl_client/core/: __init__.py  client.py  connection.py  session.py  state_manager.py
fl_client/dashboard/: __init__.py  dashboard.py
fl_client/model/: __init__.py  wrapper.py
fl_client/storage/: __init__.py  db.py
fl_client/training/: __init__.py  dataset.py  trainer.py
fl_client/validation/: __init__.py  checks.py
fl_client/web/: __init__.py  bridge.py
fl_client/web/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
fl_client/web/ui/src/: App.jsx  index.css
fl_client/web/ui/src/api/: client.js
fl_client/web/ui/src/components/: ChartCard.jsx  LayerBuilder.jsx  LogTerminal.jsx  PageHeader.jsx  SchemaBuilder.jsx  Sidebar.jsx  Stepper.jsx  Toast.jsx
fl_client/web/ui/src/hooks/: index.js
fl_client/web/ui/src/layouts/: AppShell.jsx
fl_client/web/ui/src/pages/: CreateRoom.jsx  Dashboard.jsx  JoinRoom.jsx  Settings.jsx  Training.jsx
tests/: test_compressor.py  test_connection.py  test_model.py  test_serializer.py  test_storage.py  test_trainer.py  test_validation.py
